--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-/* Created by: Mr. Coxall
-* Created on: Sep 2020
+/* Created by: Olivia B-R
+* Created on: Feb 2023
 * This file contains the CSS for index.html
 */
 
