--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,8 @@ body {
 
 h1 {
   background-color: rgb(202, 121, 255);
-  color: hsl(0, 0%, 0%);
+  color: hsl(0 0 0);
   padding: 40px;
   text-align: center;
 }
-p {background-color: #e6cc85;}
+{background-color: #e6cc85;}
